# qrcode-analytic

./: .gitignore  404.html  Cargo.toml  README.md  index.html  justfile  package.json  pnpm-lock.yaml  privacy.html  tailwind.config.js  tailwind.scss  uno.config.ts
src/: data.rs  http.rs  main.rs
styles/: styles.css
